# cdg-player

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
logos/: CDG Logo.af
packaging/: com.77seventy77.CDGPlayer.desktop  com.77seventy77.CDGPlayer.metainfo.xml  com.77seventy77.CDGPlayer.yml
src/: cdg.rs  export.rs  icons.rs  main.rs  renderer.rs
